fix: removed horizontal scroll and added only 6 cards of days and one detailed card of the last day of the week

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,11 +77,3 @@ body {
 ::-webkit-scrollbar-track {
   background: transparent;
 }
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
